--- a/GitUpKit/Views/en.lproj/GIAdvancedCommitViewController.xib
+++ b/GitUpKit/Views/en.lproj/GIAdvancedCommitViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GIAdvancedCommitViewController">
@@ -23,7 +23,7 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <view translatesAutoresizingMaskIntoConstraints="NO" id="Mge-gB-T5T" userLabel="Main View" customClass="GIView">
-            <rect key="frame" x="0.0" y="5" width="1000" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="1000" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <splitView dividerStyle="thin" id="ZbB-IP-Zuo" customClass="GIDualSplitView">
@@ -185,17 +185,17 @@
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <scrollView focusRingType="exterior" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="JJQ-Rg-cUm">
-                                    <rect key="frame" x="10" y="39" width="980" height="92"/>
+                                    <rect key="frame" x="10" y="61" width="980" height="70"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <clipView key="contentView" id="MSi-0x-dun">
-                                        <rect key="frame" x="1" y="1" width="978" height="90"/>
+                                        <rect key="frame" x="1" y="1" width="978" height="68"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <textView importsGraphics="NO" richText="NO" findStyle="panel" allowsUndo="YES" verticallyResizable="YES" smartInsertDelete="YES" id="ZGk-oR-MNP" customClass="GICommitMessageView">
-                                                <rect key="frame" x="0.0" y="0.0" width="978" height="90"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="978" height="68"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <size key="minSize" width="50" height="50"/>
+                                                <size key="minSize" width="978" height="68"/>
                                                 <size key="maxSize" width="10000000" height="10000000"/>
                                                 <attributedString key="textStorage">
                                                     <fragment content="&lt;MESSAGE&gt;">
@@ -206,7 +206,7 @@
                                                     </fragment>
                                                 </attributedString>
                                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                <size key="minSize" width="50" height="50"/>
+                                                <size key="minSize" width="978" height="68"/>
                                                 <size key="maxSize" width="10000000" height="10000000"/>
                                                 <connections>
                                                     <outlet property="delegate" destination="-2" id="N5I-f7-WzM"/>
@@ -272,6 +272,15 @@ DQ
                                         <action selector="unstageAll:" target="-2" id="gIv-KI-C4E"/>
                                     </connections>
                                 </button>
+                                <button id="pZL-J9-iP0">
+                                    <rect key="frame" x="923" y="37" width="69" height="18"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                    <buttonCell key="cell" type="check" title="Pairing" bezelStyle="regularSquare" imagePosition="left" inset="2" id="419-Yd-PRU">
+                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                        <font key="font" metaFont="system"/>
+                                        <string key="keyEquivalent">a</string>
+                                    </buttonCell>
+                                </button>
                             </subviews>
                         </customView>
                     </subviews>
@@ -287,6 +296,9 @@ DQ
                             <real key="value" value="100"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="delegate" destination="419-Yd-PRU" id="Ehz-ek-5Fj"/>
+                    </connections>
                 </splitView>
             </subviews>
             <point key="canvasLocation" x="576" y="511"/>
