--- a/GitUpKit/Views/en.lproj/GIMapViewController.xib
+++ b/GitUpKit/Views/en.lproj/GIMapViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GIMapViewController">
@@ -388,7 +388,7 @@ Gw
             <point key="canvasLocation" x="433" y="1061.5"/>
         </customView>
         <customView id="G2x-MY-zBs" userLabel="Rename Tag View">
-            <rect key="frame" x="-5" y="0.0" width="360" height="101"/>
+            <rect key="frame" x="0.0" y="0.0" width="360" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" id="0A5-t1-c3Z">
@@ -444,7 +444,7 @@ Gw
             <point key="canvasLocation" x="427" y="899.5"/>
         </customView>
         <customView id="qvM-yB-KWz" userLabel="Message View">
-            <rect key="frame" x="0.0" y="-5" width="590" height="251"/>
+            <rect key="frame" x="0.0" y="0.0" width="590" height="251"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <scrollView autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="MtR-30-oY5">
@@ -529,7 +529,7 @@ Gw
             <point key="canvasLocation" x="472" y="1770.5"/>
         </customView>
         <customView id="ga8-vG-A68" userLabel="Create Branch View">
-            <rect key="frame" x="-5" y="0.0" width="414" height="125"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" id="CUj-FC-ARp">
