--- a/GitUpKit/Views/en.lproj/GISimpleCommitViewController.xib
+++ b/GitUpKit/Views/en.lproj/GISimpleCommitViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GISimpleCommitViewController">
@@ -69,7 +69,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="278" height="121"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                <size key="minSize" width="278" height="121"/>
+                                                                <size key="minSize" width="263" height="121"/>
                                                                 <size key="maxSize" width="10000000" height="10000000"/>
                                                                 <attributedString key="textStorage">
                                                                     <fragment content="&lt;MESSAGE&gt;">
@@ -80,7 +80,7 @@
                                                                     </fragment>
                                                                 </attributedString>
                                                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                <size key="minSize" width="278" height="121"/>
+                                                                <size key="minSize" width="263" height="121"/>
                                                                 <size key="maxSize" width="10000000" height="10000000"/>
                                                                 <connections>
                                                                     <outlet property="delegate" destination="-2" id="ItD-9a-FP2"/>
@@ -94,7 +94,7 @@
                                                         <autoresizingMask key="autoresizingMask"/>
                                                     </scroller>
                                                     <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="ya4-9F-ykc">
-                                                        <rect key="frame" x="224" y="1" width="15" height="133"/>
+                                                        <rect key="frame" x="264" y="1" width="15" height="121"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                     </scroller>
                                                 </scrollView>
